# semantica-task-engine

./: .cursorrules  .dockerignore  .gitignore  AI_ARCHITECTURE_GUIDE.md  CRITICAL_REVIEW.md  Cargo.toml  Dockerfile  Dockerfile.dev  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PRODUCTION_READY_REPORT.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  README_BUILD.md  RISK_ANALYSIS.md  USAGE_GUIDE.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  justfile  rustfmt.toml
.serena/: project.yml
.serena/memories/: adr_comprehensive_summary.md  api_contract.md  code_style_conventions.md  codebase_structure.md  database_policy.md  golden_test_strategy.md  phase_roadmap.md  project_overview.md  schema_evolution.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md  testing_strategy.md  wire_first_pattern.md
ADR_v2/: ADR-000-master-integration.md  ADR-001-system-architecture.md  ADR-002-operational-semantics.md  ADR-010-database-persistence.md  ADR-020-api-contract.md  ADR-030-testing-strategy.md  ADR-040-security-policy.md  ADR-050-development-roadmap.md  ADR-060-distribution-lifecycle.md  ADR-070-integration-enforcement.md
crates/api-rpc/: Cargo.toml
crates/api-rpc/src/: error.rs  handler.rs  lib.rs  rate_limiter.rs  server.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/application/: mod.rs  recovery.rs  retry.rs  scheduler.rs
crates/core/src/application/dev_task/: enqueue.rs  enqueue_test.rs  mod.rs
crates/core/src/application/maintenance/: mod.rs
crates/core/src/application/worker/: constants.rs  mod.rs  panic_guard.rs  shutdown.rs
crates/core/src/domain/: error.rs  job.rs  mod.rs  queue.rs
crates/core/src/port/: id_provider.rs  job_repository.rs  maintenance.rs  mod.rs  system_probe.rs  task_executor.rs  time_provider.rs  transaction.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  telemetry.rs
crates/infra-sqlite/: Cargo.toml
crates/infra-sqlite/migrations/: 001_initial_schema.sql  002_add_execution_retry.sql  003_add_scheduling.sql  004_add_dx_fields.sql
crates/infra-sqlite/migrations_down/: 003_down.sql  004_down.sql
crates/infra-sqlite/src/: connection.rs  job_repository.rs  lib.rs  maintenance_impl.rs  migration.rs  mod.rs  transaction.rs
crates/infra-system/: Cargo.toml
crates/infra-system/src/: lib.rs  subprocess_executor.rs  system_probe_impl.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: critical_edge_cases.rs  phase1_dod.rs  phase2_dod.rs  phase3_dod.rs  phase3_edge_cases.rs  phase4_dod.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: simple.rs
crates/sdk/src/: client.rs  error.rs  lib.rs  types.rs
docs/: CODE_REVIEW.md  COMPLETED_PHASE1.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION.md  api-spec.md  operations.md  phase1-checklist.md
examples/integration/: README.md  docker-compose.example.yml  quickstart.sh
examples/python/: Dockerfile  README.md  semantica_client.py  test_integration.py
migrations_down/: 002_down.sql
python-sdk/: .coverage  AI_CONTEXT.md  QUICKSTART.md  README.md  USAGE.md  deploy.sh  pyproject.toml
python-sdk/examples/: auto_daemon.py  manual_daemon.py  simple.py
python-sdk/semantica/: __init__.py  client.py  errors.py  types.py
python-sdk/semantica_task_engine/: types.py
python-sdk/semantica_task_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-sdk/semantica_task_sdk.egg-info/: PKG-INFO  SOURCES.txt
python-sdk/tests/: test_basic.py
scripts/: deploy.sh  verify.sh
tests/: concurrency_tests.rs  domain_tests.rs  integration_e2e.rs
tests/integration/: phase1_dod_test.rs
