# Semantica Task Engine - Workspace Root
# Hexagonal Architecture enforced via Cargo Workspace (ADR-001)

[workspace]
members = [
    "crates/core",
    "crates/infra-sqlite",
    "crates/infra-system",
    "crates/api-rpc",
    "crates/daemon",
    "crates/cli", # Phase 4
    "crates/sdk", # Phase 4: Rust Client SDK
    "crates/integration-tests",
]
resolver = "2"

# Shared dependency versions across all crates
[workspace.dependencies]
# Core
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.57"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Phase 4: OpenTelemetry (optional)
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = "0.27"

# Config & Utils
config = "0.14"
directories = "5.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# System
sysinfo = "0.30"

# RPC (for future api-rpc crate)
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }

# Utils
rand = "0.8"

# Unix-specific
nix = { version = "0.29", features = ["signal", "process"] }

# Dev dependencies
tokio-test = "0.4.3"
mockall = "0.12.1"

# Build Profiles (ADR-001)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
