[package]
name = "semantica-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP Client for JSON-RPC
reqwest = { version = "0.12", features = ["json"] }

# Pretty printing
tabled = "0.16"
colored = "2.1"

