[package]
name = "semantica-core"
version = "0.1.0"
edition = "2021"
authors = ["Semantica Team"]
description = "Core domain logic and ports for Semantica Task Engine"

# Core has MINIMAL dependencies (ADR-001: Hexagonal Architecture)
# NO database, NO system libs, NO RPC - only pure logic

[dependencies]
# Serialization (for domain models)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (library-style)
thiserror = { workspace = true }

# Async traits
tokio = { workspace = true }
async-trait = { workspace = true }

# Observability
tracing = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

