[package]
name = "semantica-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Semantica Team"]
description = "Main daemon executable for Semantica Task Engine"

[[bin]]
name = "semantica"
path = "src/main.rs"

[dependencies]
# All crates (Composition Root - ADR-001)
semantica-core = { path = "../core" }
semantica-infra-sqlite = { path = "../infra-sqlite" }
semantica-infra-system = { path = "../infra-system" }
semantica-api-rpc = { path = "../api-rpc" }

# Error handling (application-style)
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# Async
tokio = { workspace = true }
shellexpand = "3.1.1"

# Phase 4: OpenTelemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { version = "0.26", optional = true }

[features]
default = []
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[dev-dependencies]
tokio-test = { workspace = true }

semantica-api-rpc = { path = "../api-rpc" }
