[package]
name = "semantica-infra-system"
version = "0.1.0"
edition = "2021"
authors = ["Semantica Team"]
description = "System adapters (SystemProbe, TaskExecutor) for Semantica Task Engine"

[dependencies]
# Core dependency (ONLY depends on core)
semantica-core = { path = "../core" }

# System monitoring
sysinfo = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Observability
tracing = { workspace = true }

# Serialization (for payload parsing)
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

